kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-depl
  namespace: onlineeventbooking-yourname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service-container
        image: your-dockerhub-username/booking-service:latest
        ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service-svc
  namespace: onlineeventbooking-yourname
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
