kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-depl
  namespace: onlineeventbooking-yourname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service-container
        image: your-dockerhub-username/notification-service:latest
        ports:
          - containerPort: 6060
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-svc
  namespace: onlineeventbooking-yourname
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060
  type: ClusterIP
