kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-depl
  namespace: onlineeventbooking-yourname
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service-container
        image: your-dockerhub-username/user-service:latest
        ports:
          - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  namespace: onlineeventbooking-yourname
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
