kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventbooking-ingress
  namespace: onlineeventbooking-yourname
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: your-app.your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-svc
                port:
                  number: 80
          # If you want to route backend calls like /api/user -> user-service:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service-svc
                port:
                  number: 3001
          - path: /api/event
            pathType: Prefix
            backend:
              service:
                name: event-service-svc
                port:
                  number: 4000
          - path: /api/booking
            pathType: Prefix
            backend:
              service:
                name: booking-service-svc
                port:
                  number: 5000
          - path: /api/notification
            pathType: Prefix
            backend:
              service:
                name: notification-service-svc
                port:
                  number: 6060
